--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,7 @@ modules.xml
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.vscode
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
